# helios_sms

./: .gitignore  README.md  main.py  main.qml  pyproject.toml  requirements.txt
android_frontend/: CMakeLists.txt  README.md  main.qml  qml.qrc
android_frontend/android/: AndroidManifest.xml
android_frontend/components/: TempDisplay.qml  Theme.qml  VitalsDial.qml  WarningDisplay.qml  WarningItem.qml
android_frontend/src/: main.cpp  tricorderbackend.cpp  tricorderbackend.h
android_frontend/views/: MissionView.qml  TricorderView.qml
backend/: alert_manager.py  backend.py  main.py  missions.py  simulation.py  simulation.py.autosave
backend/assets/: missions.json
backend/common/: mqtt.py  topics.py  utils.py
backend/mission/: __init__.py  manager.py  mission.py  missions.json  models.py  mqtt_adapter.py  persistence.py
backend/mqtt/: __init__.py  client.py
backend/simulator/: __init__.py  simulator.py  suit_simulator.py
backend/telemetry/: __init__.py  helpers.py  models.py  producer.py  suit.py  vitals.py
frontend/: main.qml  tricorder.py
frontend/components/: GaugeBar.qml  MissionDetail.qml  MissionItem.qml  MissionList.qml  MissionTaskItem.qml  SpaceButton.qml  SpaceMissionCard.qml  TaskItem.qml  TempDisplay.qml  Theme.qml  VitalsDial.qml  WarningDisplay.qml  WarningItem.qml
frontend/views/: MissionView.qml  TricorderView.qml
